# yt_stream_recorder

./: .gitignore  changelog.md  pyproject.toml  readme.md  start.sh
launcher/: yt_stream_recorder_win.py
linux/: yt_stream_recorder.sh
windows/: yt_stream_recorder.bat  yt_stream_recorder_portable.bat  yt_stream_recorder_win.py
yt_stream_recorder/: __init__.py  __main__.py  error.txt  main.py  setup.py
