[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dependencies = [
  "rich",
  "yt-dlp",
  "betterdata",
  "easyselect",
  "gmanka_yml",
]
name = "yt_stream_recorder"
version = "22.2.3"
authors = [
  { name="gmanka", email="gmankab@gmail.com" },
]
description = "tool for recording youtube streams"
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gmankab/yt_stream_recorder"
"Documentation" = "https://github.com/gmankab/yt_stream_recorder"
"Bug Tracker" = "https://github.com/gmankab/yt_stream_recorder/issues"
